kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
      annotations:
        ad.datadoghq.com/app.logs: '[{"source":"nginx","service":"homepage"}]'
    spec:
      containers:
        - name: app
          image: app
          ports:
            - containerPort: 8080
