kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vitrine
spec:
  selector:
    app: vitrine
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
