kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vitrine
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: www.gsri.team
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header Cache-Control "public, max-age=86400";
      gzip on;
      gzip_buffers 16 8k;
      gzip_comp_level 6;
      gzip_disable "msie6";
      gzip_http_version 1.1;
      gzip_min_length 256;
      gzip_proxied any;
      gzip_types text/css text/html;
      gzip_vary on;
spec:
  tls:
    - secretName: cert-gsri-team
      hosts:
        - www.gsri.team
        - gsri.team
  rules:
    - host: www.gsri.team
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vitrine
                port:
                  number: 8080
